# llmfmt

./: Cargo.toml  Justfile  README.md
.github/workflows/: ci.yml  release.yml
examples/: config.yaml  metrics.csv  users.json
src/: analysis.rs  cli.rs  error.rs  format.rs  io.rs  lib.rs  main.rs  output.rs  profile.rs  stats.rs  validation.rs
tests/: formats.rs  routing.rs  stats_and_options.rs  tsv.rs
