[package]
name = "llmfmt"
version = "0.1.2"
edition = "2024"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
csv = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
toml = "0.8.23"
toon-format = { version = "0.4.5", default-features = false }
